@@ -1,3 +1,10 @@
+20010613
+- OpenBSD CVS Sync
+   - markus@cvs.openbsd.org 2001/06/12 10:58:29
+     [session.c]
+     merge session_free into session_close()
+     merge pty_cleanup_proc into session_pty_cleanup()
+
 20010612
  - scp.c ID update (upstream synced vfsprintf() from us)
  - OpenBSD CVS Sync
@@ -5616,4 +5623,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1280 2001/06/12 00:23:12 mouring Exp $
+$Id: ChangeLog,v 1.1281 2001/06/13 04:35:43 mouring Exp $
